tree-sitter-cabal/test/corpus/comments.txt
================================================================================
Column-0 comment between two fields in an indented section
================================================================================

cabal-version: 3.4
name: pkg

library
  foo: bar
-- comment in middle of block
  baz: qux

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (identifier)))
        (comment)
        (field
          (field_name)
          (field_value
            (identifier)))
        (dedent)))))

================================================================================
Column-0 comment between a field and a conditional (hls pattern)
================================================================================

cabal-version: 3.4
name: pkg

test-suite ts
  default-extensions: OverloadedStrings
-- comment about flags
  if flag(eval)
    cpp-options: -Dhls_eval

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (test_suite
      (section_type)
      (section_name)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (identifier)))
        (comment)
        (conditional
          (condition_if
            (condition)
            (property_or_conditional_block
              (indent)
              (field
                (field_name)
                (field_value
                  (flag_token)))
              (dedent))))
        (dedent)))))

================================================================================
Multiple consecutive column-0 comments inside an indented section
================================================================================

cabal-version: 3.4
name: pkg

library
  foo: bar
-- comment 1
-- comment 2
-- comment 3
  baz: qux

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (identifier)))
        (comment)
        (comment)
        (comment)
        (field
          (field_name)
          (field_value
            (identifier)))
        (dedent)))))

================================================================================
Column-0 comment between two conditionals inside a library
================================================================================

cabal-version: 3.4
name: pkg

library
  if flag(eval)
    cpp-options: -Dhls_eval
-- comment between conditionals
  if flag(ormolu)
    cpp-options: -Dhls_ormolu

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (indent)
        (conditional
          (condition_if
            (condition)
            (property_or_conditional_block
              (indent)
              (field
                (field_name)
                (field_value
                  (flag_token)))
              (dedent))))
        (comment)
        (conditional
          (condition_if
            (condition)
            (property_or_conditional_block
              (indent)
              (field
                (field_name)
                (field_value
                  (flag_token)))
              (dedent))))
        (dedent)))))

================================================================================
Column-0 comment between sections stays outside both sections
================================================================================

cabal-version: 3.4
name: pkg

library
  foo: bar

-- this comment is between sections
executable bin
  baz: qux

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (identifier)))
        (dedent)))
    (comment)
    (executable
      (section_type)
      (section_name)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (identifier)))
        (dedent)))))

================================================================================
Inline trailing comment after a field value
================================================================================

cabal-version: 3.4
name: pkg

library
  foo: bar -- trailing
  baz: qux

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (identifier))
          (comment))
        (field
          (field_name)
          (field_value
            (identifier)))
        (dedent)))))

================================================================================
Comments at same indent as if, between condition and deeper body
================================================================================

cabal-version: 3.4
name: pkg

library
  if !os(windows) && flag(dynamic)
  -- comment at same indent as if
  -- another comment
    ghc-options: -dynamic

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (indent)
        (conditional
          (condition_if
            (condition)
            (property_or_conditional_block
              (indent)
              (comment)
              (comment)
              (field
                (field_name)
                (field_value
                  (flag_token)))
              (dedent))))
        (dedent)))))
