tree-sitter-cabal/test/corpus/fields.txt
================================================================================
Single value fields
================================================================================

cabal-version: 1.0
name: a-package

common section
  field-one: value-one
  field-two:
    value-one

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (common
      (section_type)
      (section_name)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (identifier)))
        (field
          (field_name)
          (indent)
          (field_value
            (identifier))
          (dedent))
        (dedent)))))

================================================================================
Comment in continuation list
================================================================================

cabal-version: 3.0
name: pkg

library
  exposed-modules:
    Foo.Bar
    -- intentionally exclude Baz
    Foo.Qux

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (indent)
          (field_value
            (module_name))
          (comment)
          (field_value
            (module_name))
          (dedent))
        (dedent)))))

================================================================================
build-depends with version constraints
================================================================================

cabal-version: 3.0
name: pkg

library
  build-depends:
      base >= 4.14 && < 5
    , bytestring ^>= 0.11
    , text

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (indent)
          (field_value
            (identifier)
            (constraint_op)
            (version)
            (constraint_op)
            (constraint_op)
            (integer))
          (field_value
            (identifier)
            (constraint_op)
            (version))
          (field_value
            (identifier))
          (dedent))
        (dedent)))))

================================================================================
exposed-modules with module and bare-uppercase items
================================================================================

cabal-version: 3.0
name: pkg

library
  exposed-modules:
    Codec.Binary.Base16
    Paths_pkg

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (indent)
          (field_value
            (module_name))
          (field_value
            (identifier))
          (dedent))
        (dedent)))))

================================================================================
Multiple value fields
================================================================================

cabal-version: 1.0
name: a-package

common section
  field-a: value-one value-two value-three
  field-c: value-one
    value-two
    value-three
  field-f:
    value-one
    value-two
    value-three

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (common
      (section_type)
      (section_name)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (identifier)
            (identifier)
            (identifier)))
        (field
          (field_name)
          (field_value
            (identifier))
          (indent)
          (field_value
            (identifier))
          (field_value
            (identifier))
          (dedent))
        (field
          (field_name)
          (indent)
          (field_value
            (identifier))
          (field_value
            (identifier))
          (field_value
            (identifier))
          (dedent))
        (dedent)))))

================================================================================
tested-with with brace version set
================================================================================

cabal-version: 3.0
name: pkg
tested-with: GHC == {9.14.1, 9.12.2, 9.10.3, 9.8.4, 9.6.7}

library
  foo: bar

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier)))
    (field
      (field_name)
      (field_value
        (identifier)
        (constraint_op)
        (version)
        (version)
        (version)
        (version)
        (version))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (identifier)))
        (dedent)))))

================================================================================
ghc-options with -with-rtsopts=-N
================================================================================

cabal-version: 3.0
name: pkg

executable foo
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (executable
      (section_type)
      (section_name)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (flag_token)
            (flag_token)
            (flag_token)
            (flag_token)))
        (dedent)))))

================================================================================
build-depends with sublibrary qualified name
================================================================================

cabal-version: 3.0
name: pkg

library
  build-depends:
      base
    , haskell-language-server:hls-cabal-plugin

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (indent)
          (field_value
            (identifier))
          (field_value
            (qualified_name))
          (dedent))
        (dedent)))))

================================================================================
description with angle-bracketed URL
================================================================================

cabal-version: 3.0
name: pkg
description: see <https://example.com/x>

library
  foo: bar

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier)))
    (field
      (field_name)
      (field_value
        (identifier)
        (constraint_op)
        (url)
        (constraint_op))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (identifier)))
        (dedent)))))

================================================================================
quoted string with -- inside (not a comment)
================================================================================

cabal-version: 3.0
name: pkg

executable foo
  ghc-options: "-with-rtsopts=-T -Iw1 --disable-delayed-os-memory-return"

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (executable
      (section_type)
      (section_name)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (quoted_string)))
        (dedent)))))
