tree-sitter-cabal/test/corpus/indentations.txt
================================================================================
Indentation before sections
================================================================================

cabal-version: 1.0
foo:
  tata
  titi
  tutu

flag bar
  hoge: fuga

--------------------------------------------------------------------------------

(cabal
  (properties
    (field
      (field_name)
      (field_value
        (version)))
    (field
      (field_name)
      (indent)
      (field_value
        (identifier))
      (field_value
        (identifier))
      (field_value
        (identifier))
      (dedent)))
  (sections
    (flag
      (section_type)
      (section_name)
      (property_block
        (indent)
        (field
          (field_name)
          (field_value
            (identifier)))
        (dedent)))))

================================================================================
Indentation between sections
================================================================================

cabal-version: 1.0
foo: tata titi tutu

library
  hoge: fuga
    piyo

executable foo
  foo: bar

--------------------------------------------------------------------------------

(cabal
  (properties
    (field
      (field_name)
      (field_value
        (version)))
    (field
      (field_name)
      (field_value
        (identifier)
        (identifier)
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (identifier))
          (indent)
          (field_value
            (identifier))
          (dedent))
        (dedent)))
    (executable
      (section_type)
      (section_name)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (identifier)))
        (dedent)))))
