tree-sitter-cabal/test/corpus/properties.txt
================================================================================
Properties, without Cabal version
================================================================================

name: pkg-foo
build-type: Simple
version: 1.0

library
  foo: bar

--------------------------------------------------------------------------------

(cabal
  (properties
    (field
      (field_name)
      (field_value
        (identifier)))
    (field
      (field_name)
      (field_value
        (identifier)))
    (field
      (field_name)
      (field_value
        (version))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (identifier)))
        (dedent)))))

================================================================================
Properties, with Cabal version
================================================================================

cabal-version : 3.4
name: pkg-foo
version: 1.1
build-type: Simple
license: BSD

library
    foo: bar

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier)))
    (field
      (field_name)
      (field_value
        (version)))
    (field
      (field_name)
      (field_value
        (identifier)))
    (field
      (field_name)
      (field_value
        (identifier))))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (identifier)))
        (dedent)))))

================================================================================
Properties, with comment
================================================================================

cabal-version : 3.4
-- cabal-version really has to be first!
name: pkg-foo
-- a comment must be on a line by itself 
build-type: Simple
foo-bar: baz

-- the first section
library
  -- begin block with comment
  foo: bar
  -- end block with comment

-- here comes another section
executable foo
  bar: baz

-- end with a comment

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (comment)
  (properties
    (field
      (field_name)
      (field_value
        (identifier)))
    (comment)
    (field
      (field_name)
      (field_value
        (identifier)))
    (field
      (field_name)
      (field_value
        (identifier)))
    (comment))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (indent)
        (comment)
        (field
          (field_name)
          (field_value
            (identifier)))
        (comment)
        (dedent)))
    (comment)
    (executable
      (section_type)
      (section_name)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (identifier)))
        (dedent)))
    (comment)))

================================================================================
Properties, with multi-line values
================================================================================

cabal-version : 3.4
foo1: Single line value, on same line
bar1:
    Single line value, on separate line
foo2: Two lines, starting on same line
    and continuing
bar2:
    Two lines, starting separate line
    and continuing
foo3: Three lines, starting on same line
    and continuing
    and continuing
bar3:
    Three lines, starting on separate line
    and continuing
    and continuing

library
    foo: bar

--------------------------------------------------------------------------------

(cabal
  (cabal_version
    (spec_version))
  (properties
    (field
      (field_name)
      (field_value
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)))
    (field
      (field_name)
      (indent)
      (field_value
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier))
      (dedent))
    (field
      (field_name)
      (field_value
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier))
      (indent)
      (field_value
        (identifier)
        (identifier))
      (dedent))
    (field
      (field_name)
      (indent)
      (field_value
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier))
      (field_value
        (identifier)
        (identifier))
      (dedent))
    (field
      (field_name)
      (field_value
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier))
      (indent)
      (field_value
        (identifier)
        (identifier))
      (field_value
        (identifier)
        (identifier))
      (dedent))
    (field
      (field_name)
      (indent)
      (field_value
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier))
      (field_value
        (identifier)
        (identifier))
      (field_value
        (identifier)
        (identifier))
      (dedent)))
  (sections
    (library
      (section_type)
      (property_or_conditional_block
        (indent)
        (field
          (field_name)
          (field_value
            (identifier)))
        (dedent)))))
